--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -5,19 +5,20 @@ body {
 .para,
 .small-para {
   color: hsl(0, 0%, 0%);
-  font-weight: 800;
+  
 }
 
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
+.para.small-para {
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .para {
-  font-size: 22px;
+  font-size: 26px;
+  font-weight: bolder;
 }
 
-.confirm {
+.button.confirm{
   background: green;
   color: white;
   font-weight: bold;
@@ -29,7 +30,7 @@ body {
   font-size: 20px;
 }
 
-.child {
+.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
